--- a/index.html
+++ b/index.html
@@ -142,18 +142,31 @@
     <body>
         <h1>Quote Generator</h1>
         <form id="uploadForm">
-            <label for="turnaroundTime">Delivery Time:</label>
-            <select id="turnaroundTime" name="turnaroundTime" required>
+            <label for="turnaroundTime" class="field-label-2">Delivery Time</label>
+            <select id="turnaroundTime" name="turnaroundTime" required="" class="w-select">
                 <option value="48 hours">48 hours</option>
                 <option value="24 hours">24 hours</option>
-                <!-- Add more options if needed -->
             </select>
-            <label for="quality">Quality:</label>
-            <select id="quality" name="quality" required>
+            <label for="quality" class="field-label-2">Quality</label>
+            <select id="quality" name="quality" required="" class="w-select">
                 <option value="Generic">Generic</option>
                 <option value="Business specific">Business specific</option>
             </select>
 
+            <label for="language" class="field-label-2">Desired Language</label>
+            <select id="language" name="language" data-name="language" required="" class="w-select">
+                <option value="English">English</option>
+                <option value="French">French</option>
+                <option value="Italian">Italian</option>
+                <option value="German">German</option>
+                <option value="Swiss German">Swiss German</option>
+                <option value="Portuguese">Portuguese</option>
+                <option value="simplified Chinese">simplified Chinese</option>
+                <option value="Japanese">Japanese</option>
+                <option value="Arabic">Arabic</option>
+            </select>
+
+            <label for="file-upload" class="field-label-2">File Upload</label>
             <div class="file-upload-container">
                 <div class="custom-file">
                     <input type="file" class="custom-file-input" id="fileInput" name="file" accept=".doc,.docx,.pdf,.xls,.xlsx,.ppt,.pptx,.txt" required />
@@ -164,7 +177,7 @@
             </div>
 
             <div id="contextFileContainer" style="display: none">
-                <label for="context" class="context-label">Context</label>
+                <label for="context" class="field-label-2">Context</label>
                 <div class="file-upload-container">
                     <div class="custom-file">
                         <input type="file" class="custom-file-input" id="contextFileInput" name="contextFile" accept=".doc,.docx,.pdf,.xls,.xlsx,.ppt,.pptx,.txt" />
@@ -327,7 +340,7 @@
                     e.preventDefault();
 
                     grecaptcha.ready(function() {
-                        grecaptcha.execute('6LcbydcpAAAAAHmNRQHo6rWbUQcV5Ub7lTepkOQq', { action: 'submit' }).then(function(token) {
+                        grecaptcha.execute('6Le2l9UpAAAAAAqPCVBq6hdumV0KR79KO0UPyQLR', { action: 'submit' }).then(function(token) {
                             const form = document.getElementById("uploadForm");
                             const formData = new FormData(form);
                             formData.append("g-recaptcha-response", token);
