--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </select>
 
             <label for="language1" class="field-label-2">Desired Language</label>
-            <select id="language" name="language" data-name="language" required="" class="w-select" data-multi-select multiple data-select-class="w-select">
+            <select id="language" name="language" data-name="language" required="" class="w-select" data-multi-select multiple data-select-class="w-select" data-placeholder="Select language(s)">
                 <option value="English">English</option>
                 <option value="French">French</option>
                 <option value="Italian">Italian</option>
@@ -72,7 +72,8 @@
                 </div>
             </div>
 
-            <label id="priceElement" class="price-element">Price: $0.00</label>
+            <label id="priceElement" class="price-element">Price: $<span id="priceValue">0.00</span></label>
+            <input type="hidden" id="wordElement" data-word="Calculating">
             <button id="payButton" class="pay-button" onclick="generateStripePaymentLink(event)">Proceed to Checkout</button>
             <div id="payButtonLoading" style="display: none">
                 <button class="pay-button pay-button-loading">
