--- a/index.html
+++ b/index.html
@@ -5,23 +5,20 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
         <link href="/css/MultiSelect.css" rel="stylesheet" type="text/css">
         <script src="https://www.google.com/recaptcha/api.js?render=6LcbydcpAAAAAHmNRQHo6rWbUQcV5Ub7lTepkOQq"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/21.6.0/i18next.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/6.1.2/i18nextBrowserLanguageDetector.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-http-backend/1.3.1/i18nextHttpBackend.min.js"></script>
-        <script src="/js/MultiSelect.min.js"></script>
+        <script src="/js/DropdownSelect.js"></script>
     </head>
     <body>
         <h1>Quote Generator</h1>
         <form id="uploadForm">
             <label for="turnaroundTime" class="field-label-2">Delivery Time</label>
             <select id="turnaroundTime" name="turnaroundTime" required="" class="w-select">
-                <option value="48 hours">48 hours</option>
-                <option value="24 hours">24 hours</option>
+                    <option value="48 hours" selected>48 hours</option>
+                    <option value="24 hours">24 hours</option>
             </select>
             <label for="quality" class="field-label-2">Quality</label>
             <select id="quality" name="quality" required="" class="w-select">
-                <option value="Standard">Standard</option>
+                <option value="Standard" selected>Standard</option>
                 <option value="Business specific">Business specific</option>
             </select>
 
